# automatetheboringstuff-py-tests

./: .gitignore  AGENTS.md  Makefile  README.md  mise.toml
.github/workflows/: codeql-analysis.yml  codeql.yml
src/abs/: introductions.py
src/azure-ai-102/: .gitignore  Makefile  README.md
src/azure-ai-102/IAC/: README.md  outputs.tf
src/azure-ai-102/agents/: README.md
src/azure-ai-102/genai/: README.md
src/azure-ai-102/information-extraction/: README.md
src/azure-ai-102/language/: README.md
src/azure-ai-102/vision/: README.md
src/azure-dp-100/: .gitignore  Makefile  README.md  pyproject.toml
src/azure-dp-100/02-explore-developer-tools/: config.json.example
src/learn/: devops-python-basics-1.py  devops-python-basics-2.py  devops-python-basics.py  helloAndAge.py
src/project/: README.md
src/project/ai-open-webui/: Makefile  README.md  pyproject.toml
src/project/ai-rag-llm/: README.md  Vagrantfile  vm_provisioner.sh  vm_provisioner_user.sh
src/project/ai-video/: Makefile  README.md
src/project/ai-whisper/: .gitignore  Makefile  README.md  create-subtitle.py  pyproject.toml
src/project/automation-gpt/: README..md  README.md  clean-downloads.py  extract-translate-headers.py  python-chatgpt.py  requirements.txt  translated_headers.html
src/project/csv/: .gitignore  compare-columns.py  csv-check-duplicates-in-columns.py  csv-get-rows-from-values-in-other-csv.py  delete-rows-from-csv.py  filter-columns.py  pyproject.toml  reorder-names.py
src/project/data-science/: .#jupyter-in-org.org  (+5 more)
src/vscodepytutorial/: hello.py  newEnvironment.sh
(+89 files in other folders)
